--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>mesh</title>
-    <canvas id="canvas">
+    <title>thumbwrestling</title>
+    <div class="screens">
+
+      <canvas id="l"></canvas>
+      <canvas id="r"></canvas>
+    </div>
     </canvas>
     <script src="./dist/bundle.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="main.css"> 
   </body>
 </html>
