--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
+
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>thumbwrestling</title>
@@ -8,8 +10,17 @@
     <canvas id="l"></canvas>
     <canvas id="r"></canvas>
   </div>
+  <div class="display">
+    <div id="score">
+      <span id="lScore">0</span>
+      <span>-</span>
+      <span id="rScore">0</span>
+    </div>
+    <div id="countdown">Ready?</div>
+  </div>
   <script src="./dist/bundle.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
   </body>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </html>
